Custame-vpc.YAML
AWSTemplateFormatVersion: "2010-09-09"
Description: tcs vpc infrastructure
Resources:
 tcsVPC:
   Type: AWS::EC2::VPC
   Properties:
     CidrBlock: 192.168.0.0/16
     EnableDnsSupport: 'true'
     EnableDnsHostnames: 'true'
     Tags:
      - Key: Name
        Value: tcs-vpc


 tcswebSubnet:
   Type: AWS::EC2::Subnet
   Properties:
     VpcId: !Ref tcsVPC
     CidrBlock: 192.168.0.0/20
     AvailabilityZone: "us-west-2a"
     MapPublicIpOnLaunch: 'true'
     Tags:
     - Key: Name
       Value: tcs-web-subnet


 tcsdbSubnet:
   Type: AWS::EC2::Subnet
   Properties:
     VpcId: !Ref tcsVPC
     CidrBlock: 192.168.16.0/20
     AvailabilityZone: "us-west-2b"
     MapPublicIpOnLaunch: 'false'
     Tags:
     - Key: Name
       Value: tcs-database-subnet


 tcsInternetGateway:
   Type: AWS::EC2::InternetGateway
   Properties:
     Tags:
     - Key: Name
       Value: tcs-igw


 tcsigwattached:
   Type: AWS::EC2::VPCGatewayAttachment
   Properties:
     VpcId:
       Ref: tcsVPC
     InternetGatewayId:
       Ref: tcsInternetGateway


 tcswebRouteTable:
   Type: AWS::EC2::RouteTable
   Properties:
     VpcId: 
       Ref: tcsVPC
     Tags:
     - Key: Name
       Value: tcs-web-rt
    
 tcsdbRouteTable:
   Type: AWS::EC2::RouteTable
   Properties:
     VpcId: 
       Ref: tcsVPC
     Tags:
     - Key: Name
       Value: tcs-database-rt


 tcsigwRoute:
   Type: AWS::EC2::Route
   DependsOn: tcsigwattached
   Properties:
      RouteTableId:
        Ref: tcswebRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: tcsInternetGateway


 tcswebSubnetRouteTableAssociation:
   Type: AWS::EC2::SubnetRouteTableAssociation
   Properties:
     SubnetId:
       Ref: tcswebSubnet
     RouteTableId:
       Ref: tcswebRouteTable


 tcsdbSubnetRouteTableAssociation:
   Type: AWS::EC2::SubnetRouteTableAssociation
   Properties:
     SubnetId:
       Ref: tcsdbSubnet
     RouteTableId:
       Ref: tcsdbRouteTable


 tcswebNetworkAcl:
   Type: AWS::EC2::NetworkAcl
   Properties:
      VpcId:
        Ref: tcsVPC
      Tags:
      - Key: Name
        Value: tcs-web-nacl


 tcsdbNetworkAcl:
   Type: AWS::EC2::NetworkAcl
   Properties:
      VpcId:
        Ref: tcsVPC
      Tags:
      - Key: Name
        Value: tcs-database-nacl


 tcswebSubnetNetworkAclAssociation:
   Type: AWS::EC2::SubnetNetworkAclAssociation
   Properties:
     SubnetId:
       Ref: tcswebSubnet
     NetworkAclId:
       Ref: tcswebNetworkAcl


 tcsdbSubnetNetworkAclAssociation:
   Type: AWS::EC2::SubnetNetworkAclAssociation
   Properties:
     SubnetId:
       Ref: tcsdbSubnet
     NetworkAclId:
       Ref: tcsdbNetworkAcl


 tcswebnaclinbound:
   Type: AWS::EC2::NetworkAclEntry
   Properties:
      NetworkAclId:
        Ref: tcswebNetworkAcl
      RuleNumber: 100
      Protocol: 6
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 0
        To: 65535


 tcsdbnacloutbound:
   Type: AWS::EC2::NetworkAclEntry
   Properties:
      NetworkAclId:
        Ref: tcsdbNetworkAcl
      RuleNumber: 100
      Protocol: 6
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      Egress: true
      PortRange:
        From: 0
        To: 65535


 tcswebnacloutbound:
   Type: AWS::EC2::NetworkAclEntry
   Properties:
      NetworkAclId:
        Ref: tcswebNetworkAcl
      RuleNumber: 100
      Protocol: 6
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      Egress: true
      PortRange:
        From: 0
        To: 65535


 tcsdbnaclinbound:
   Type: AWS::EC2::NetworkAclEntry
   Properties:
      NetworkAclId:
        Ref: tcsdbNetworkAcl
      RuleNumber: 100
      Protocol: 6
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 0
        To: 65535


 tcswebSecurityGroup:
   Type: AWS::EC2::SecurityGroup
   Properties:
     GroupDescription: Allow ssh &http to www
     VpcId: !Ref tcsVPC
     SecurityGroupIngress:
       - IpProtocol: tcp
         FromPort: 22
         ToPort: 22
         CidrIp: 0.0.0.0/0
       - IpProtocol: tcp
         FromPort: 80
         ToPort: 80
         CidrIp: 0.0.0.0/0
     SecurityGroupEgress:
       - IpProtocol: tcp
         FromPort: 0
         ToPort: 65535
         CidrIp: 0.0.0.0/0


 tcsdbSecurityGroup:
   Type: AWS::EC2::SecurityGroup
   Properties:
     GroupDescription: Allow ssh from web servers only
     VpcId: !Ref tcsVPC
     SecurityGroupIngress:
       - IpProtocol: tcp
         FromPort: 22
         ToPort: 22
         CidrIp: 192.168.0.0/20
     SecurityGroupEgress:
       - IpProtocol: tcp
         FromPort: 0
         ToPort: 65535
         CidrIp: 0.0.0.0/0


 tcswebInstance:
   Type: AWS::EC2::Instance
   Properties:
     ImageId: "ami-0a283ac1aafe112d5"
     InstanceType: "t2.small"
     KeyName: "730"
     SubnetId: !Ref tcswebSubnet
     SecurityGroupIds:
       - !Ref tcswebSecurityGroup
